# colibri_coding_challenge

./: .gitignore  .pre-commit-config.yaml  README.md  databricks.yml  pyproject.toml
.github/workflows/: cd.yml  ci-pyspark-unit-tests.yml  ci.yml
resources/jobs/: orchestraion__turbine_sensors.yml
resources/pipelines/: e2e__turbine_sensors.yml  ingestion__turbine_sensors.yml
scripts/pipelines/: e2e__turbine_sensors.py  ingestion__turbine_sensors.py
src/colibri/turbine_sensors/: gold.py  silver.py
tests/turbine_sensors/: test_gold.py  test_silver.py
